fixed thumbnail sizing on small screens

--- a/src/styles/pages/user-page.css
+++ b/src/styles/pages/user-page.css
@@ -62,3 +62,10 @@
         flex-direction: column;
     }
    }
+
+   @media screen and (max-width: 350px) {
+    .videos {
+      gap:0;
+      row-gap: 15px;
+    }
+   }
